# eb_jepa

./: .gitignore  Makefile  README.md  pyproject.toml  run_experiments.py
.agent/skills/daily-research/: SKILL.md
.agent/skills/md-to-pdf/: SKILL.md
.agent/skills/pdf-to-images/: SKILL.md
.agent/skills/social-media-crafter/: SKILL.md
docs/: CONTRIBUTING.md  fast_training_guide.md
eb_jepa/: __init__.py  architectures.py  image_decoder.py  jepa.py  logging.py  losses.py  optimizers.py  planning.py  schedulers.py  visualize_samples.py
eb_jepa/datasets/: moving_mnist.py  traj_dset.py  utils.py
eb_jepa/datasets/pusht/: pusht_dset.py  pusht_env.py
eb_jepa/datasets/two_rooms/: README.md  data_config.yaml  dot_dataset.py  env.py  example.py  normalizer.py  utils.py  wall_dataset.py
examples/ac_video_jepa/: README.md  heads.py  launch_sbatch.py  main.py  train_sweep.py
examples/ac_video_jepa/cfgs/: eval.yaml  planning_cem.yaml  planning_mppi.yaml  train.yaml
examples/image_jepa/: README.md  main.py  run_exp.sh
examples/image_jepa/cfgs/: fast.yaml  muon_vit.yaml  rapid.yaml  rapid_vit.yaml  teon_vit.yaml
examples/video_jepa/: README.md  eval.py  main.py  run_exp.sh
tests/: eb_jepa_test.py  planning_test.py
workflows/: base_tests.yaml  linters.yaml
